[starter] make the app work in JDK 1.8